# SoroMint

./: .env.example  ARCHITECTURE.md  INDEX.md  MULTISIG_IMPLEMENTATION.md  PR_dividend_module.md  README.md  STREAMING_IMPLEMENTATION.md  TokenHistoryChart.tsx  VAULT_IMPLEMENTATION.md
.github/workflows/: backend-lint.yml  backend-tests.yml
client/: package-lock.json  package.json  pnpm-lock.yaml
client/src/: App.jsx  App.test.jsx  index.css  main.jsx
contracts/amm_factory/: Cargo.toml
contracts/amm_factory/src/: factory.rs  lib.rs  test_factory.rs
contracts/amm_factory/test_snapshots/test_factory/: test_factory_deploys_pool_for_minted_token_and_xlm.1.json  test_factory_rejects_duplicate_pair_creation.1.json  test_factory_rejects_tokens_outside_soromint_registry.1.json  test_factory_rejects_unsupported_quote_assets.1.json  test_factory_supports_both_xlm_and_usdc_pairs.1.json
contracts/amm_pool/: Cargo.toml
contracts/lending_pool/: Cargo.toml
contracts/lending_pool/src/: events.rs  lib.rs  oracle.rs  test.rs  types.rs
contracts/multisig/: Cargo.toml
contracts/oracle/: Cargo.toml
contracts/streaming/: Cargo.toml  DEPLOYMENT.md  GAS_OPTIMIZATION.md  QUICKREF.md  README.md
contracts/timelock/: Cargo.toml
docs/: amm-factory.md  backup-system.md  contract-api.md  delegated-minting.md  env-variables.md  metadata-updates.md  multisig-integration.md  sponsored-minting.md  streaming-payments.md  vault-system.md
example/: 527.md  README.md
server/: .env.example.backup  index.js  package.json  pnpm-lock.yaml  verify-backup-system.sh
(+176 files in other folders)
