[package]
name = "soromint-lending-pool"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"
soromint-lifecycle = { path = "../lifecycle" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
